fix: seagger settings on user routes
